# computationalGeometry

./: .gitignore  CMakeLists.txt  Line.h  Plane.h  Readme.md  Utility.cpp  Utility.h  Vec3.cpp  Vec3.h  main.cpp
1.line-triangle-intersection/: CMakeLists.txt  main.cpp
2.star-polygon/: CMakeLists.txt  main.cpp  readme.md
common/: TextFile.cpp  TextFile.h  TextFileGenerator.cpp  TextFileGenerator.h  Utility.cpp  Utility.h  Vec3.cpp  Vec3.h
